update readme and change directory structure
Added .dockerignore file. Added docker-compose-with-nginx.yaml. Modified Dockerfile for new directory structure. Updated readme

--- a/generator/docker/Dockerfile
+++ b/generator/docker/Dockerfile
@@ -2,7 +2,7 @@
 FROM php:8-apache
 
 # Copy project files to the /var/www/html directory
-COPY generator/ /var/www/html/
+COPY ../ /var/www/html/
 
 # Expose port 80
 EXPOSE 80
